--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <title>NoteNook</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="../NoteNook/note.css" rel="stylesheet">
+<link href="./note.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
 </head>
 <body>
